# manipulation-data

./: BUILD.bazel  LICENSE  README.md  falling_bricks_2d.html  foam_brick_contact_geometry.html  gripper_position_trajectory.html  gripper_trajectory.html  icp_noise.html  icp_outliers.html  icp_partial_view.html  iiwa_shelve_and_bins_science_robotics.yaml  iiwa_shelves_configuration_space.html  iterative_closest_point.html  mustard_bottle.pcd  pick_sketch.html  prediction_0.npz  prediction_1.npz  rrt_basic.html  rrt_bugtrap.html  segmentation_and_grasp_soln.npz  shelf_ik_prog_zoom.html  two_link_singularities.html
