# -*- mode: python -*-
# vi: set ft=python :

# Copyright 2020-2023 Massachusetts Institute of Technology.
# Licensed under the BSD 3-Clause License. See LICENSE.TXT for details.

exports_files(
    glob(["*"]),  # This includes all files in the directory
    visibility = ["//visibility:public"],
)
